--- a/client/src/components/ItemsGrid/style/itemsgrid.css
+++ b/client/src/components/ItemsGrid/style/itemsgrid.css
@@ -28,6 +28,12 @@
   background-color: #e9e9e9;
 }
 
+@media (max-width: 346px) {
+  .items-container .header .filters-container label {
+    font-size: 10px;
+  }
+}
+
 .items-container .list-grid {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -51,6 +57,8 @@
 
 .items-container .list-grid .item img {
   border-radius: 10px;
+  width: 200px;
+  height: 200px;
 }
 
 .items-container .list-grid .item img:hover {
