--- a/client/src/components/ItemsGrid/style/itemsgrid.scss
+++ b/client/src/components/ItemsGrid/style/itemsgrid.scss
@@ -20,6 +20,14 @@
         }
       }
     }
+
+    @media (max-width: 346px) {
+      .filters-container {
+        label {
+          font-size: 10px;
+        }
+      }
+    }
   }
 
   .list-grid {
@@ -36,6 +44,8 @@
 
       img {
         border-radius: 10px;
+        width: 200px;
+        height: 200px;
         &:hover {
           box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.75);
         }
