--- a/client/src/components/LoginComponent/style/logincomponent.css
+++ b/client/src/components/LoginComponent/style/logincomponent.css
@@ -24,13 +24,22 @@
       -ms-flex-align: center;
           align-items: center;
   background-color: rgba(0, 0, 0, 0.884);
-  border-radius: 10px;
+  border-radius: 12px;
   padding: 2%;
   color: #fff;
 }
 
 .login-container .login-form-container button {
   padding: 10px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.login-container .login-form-container button:focus {
+  outline: 2px solid #9988fc;
 }
 
 .login-container .login-form-container .login-form {
@@ -41,15 +50,71 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 83%;
+  width: 100%;
 }
 
 .login-container .login-form-container .login-form input {
   padding: 10px;
+  margin-top: 10px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.login-container .login-form-container .login-form input:focus {
+  outline: 2px solid #9988fc;
 }
 
 .login-container .login-form-container .login-form h2 {
   font-size: 40px;
-  margin-top: 0;
+  margin: 0px 0px 20px 0px;
+}
+
+.login-container .login-form-container .login-form .button-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.login-container .login-form-container .login-form .button-center .login-btn {
+  background-color: #5900ff;
+  color: #fff;
+  font-weight: 600;
+  width: 100%;
+}
+
+.login-container .login-form-container .buttons-container {
+  width: 100%;
+}
+
+.login-container .login-form-container .buttons-container .login-gl-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: white;
+  font-weight: 600;
+  width: 100%;
+}
+
+.login-container .login-form-container .buttons-container .login-gl-btn .google-image {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.login-container .login-form-container .buttons-container .register-btn {
+  background-color: #00ffb3;
+  color: #141414;
+  font-weight: 600;
+  width: 100%;
 }
 /*# sourceMappingURL=logincomponent.css.map */
