--- a/client/src/components/LoginComponent/style/logincomponent.scss
+++ b/client/src/components/LoginComponent/style/logincomponent.scss
@@ -10,26 +10,80 @@
     width: 20%;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.884);
-    border-radius: 10px;
+    border-radius: 12px;
     padding: 2%;
     color: #fff;
 
     button {
       padding: 10px;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      margin-top: 10px;
+
+      &:focus {
+        outline: 2px solid #9988fc;
+      }
     }
 
     .login-form {
       display: flex;
       flex-direction: column;
-      width: 83%;
+      width: 100%;
 
       input {
         padding: 10px;
+        margin-top: 10px;
+        border: none;
+        outline: none;
+        border-radius: 5px;
+
+        &:focus {
+          outline: 2px solid #9988fc;
+        }
       }
 
       h2 {
         font-size: 40px;
-        margin-top: 0;
+        margin: 0px 0px 20px 0px;
+      }
+
+      .button-center {
+        display: flex;
+        justify-content: center;
+
+        .login-btn {
+          background-color: rgb(89, 0, 255);
+          color: #fff;
+          font-weight: 600;
+          width: 100%;
+        }
+      }
+    }
+
+    .buttons-container {
+      width: 100%;
+      .login-gl-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(255, 255, 255);
+        font-weight: 600;
+        width: 100%;
+
+        .google-image {
+          width: 20px;
+          height: 20px;
+          margin-right: 10px;
+        }
+      }
+
+      .register-btn {
+        background-color: rgb(0, 255, 179);
+        color: rgb(20, 20, 20);
+        font-weight: 600;
+        width: 100%;
       }
     }
   }
