--- a/client/src/components/Navbar/style/navbar.scss
+++ b/client/src/components/Navbar/style/navbar.scss
@@ -46,5 +46,59 @@
         }
       }
     }
+
+    @media (max-width: 474px) {
+      .search-form {
+        display: none;
+      }
+
+      .search-icon {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .logout-button-container {
+    width: 15%;
+    margin-right: 20px;
+    .logout-button {
+      width: 100%;
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+      font-weight: 600;
+      background-color: rgb(124, 77, 255);
+      outline: 2px solid rgb(82, 19, 255);
+      color: #fff;
+      cursor: pointer;
+
+      &:hover {
+        border: 2px solid white;
+      }
+
+      &:focus {
+        outline: 2px solid rgb(82, 19, 255);
+      }
+    }
+
+    .logout-button-sing {
+      width: 100%;
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+      font-weight: 600;
+      background-color: rgb(77, 255, 166);
+      outline: 2px solid rgb(0, 204, 102);
+      color: rgb(14, 14, 14);
+      cursor: pointer;
+
+      &:hover {
+        border: 2px solid rgb(255, 255, 255);
+      }
+
+      &:focus {
+        outline: 2px solid rgb(0, 204, 102);
+      }
+    }
   }
 }
