--- a/client/src/components/ItemsGrid/style/itemsgrid.scss
+++ b/client/src/components/ItemsGrid/style/itemsgrid.scss
@@ -2,30 +2,54 @@
   padding: 5%;
 
   .header {
-    .filters-container {
-      display: flex;
-      label {
-        padding: 5px;
-        border-radius: 3px;
-        margin-right: 10px;
-        border: none;
-        cursor: pointer;
-        background-color: #f1f1f1;
-        font-weight: 500;
-        display: flex;
-        align-items: center;
+    padding: 2%;
+    border-radius: 6px;
+    margin-bottom: 40px;
 
-        &:hover {
-          background-color: #e9e9e9;
-        }
+    .filter-header {
+      width: fit-content;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.658);
+      padding: 2%;
+      border-radius: 10px;
+
+      h1 {
+        margin: 0;
+        color: #fff;
       }
     }
+  }
 
-    @media (max-width: 346px) {
-      .filters-container {
-        label {
-          font-size: 10px;
-        }
+  .filters-container {
+    display: flex;
+    label {
+      padding: 10px;
+      border-radius: 3px;
+      margin-right: 10px;
+      margin-bottom: 50px;
+      border: none;
+      cursor: pointer;
+      font-weight: 500;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      background-color: rgb(37, 37, 37);
+      cursor: pointer;
+
+      &:hover {
+        outline: 2px solid rgb(82, 19, 255);
+      }
+
+      input {
+        cursor: pointer;
+      }
+    }
+  }
+
+  @media (max-width: 346px) {
+    .filters-container {
+      label {
+        font-size: 10px;
       }
     }
   }
