--- a/client/src/components/ItemsGrid/style/itemsgrid.css
+++ b/client/src/components/ItemsGrid/style/itemsgrid.css
@@ -37,19 +37,19 @@
   border: none;
   cursor: pointer;
   font-weight: 500;
-  color: #fff;
+  color: #000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #252525;
+  background-color: #f5f5f5;
   cursor: pointer;
 }
 
 .items-container .filters-container label:hover {
-  outline: 2px solid #5213ff;
+  outline: 2px solid black;
 }
 
 .items-container .filters-container label input {
