--- a/client/src/components/ItemsGrid/style/itemsgrid.scss
+++ b/client/src/components/ItemsGrid/style/itemsgrid.scss
@@ -30,14 +30,14 @@
       border: none;
       cursor: pointer;
       font-weight: 500;
-      color: #fff;
+      color: #000;
       display: flex;
       align-items: center;
-      background-color: rgb(37, 37, 37);
+      background-color: #f5f5f5;
       cursor: pointer;
 
       &:hover {
-        outline: 2px solid rgb(82, 19, 255);
+        outline: 2px solid rgb(0, 0, 0);
       }
 
       input {
