--- a/client/src/components/LoginComponent/style/logincomponent.css
+++ b/client/src/components/LoginComponent/style/logincomponent.css
@@ -103,6 +103,7 @@
   background-color: white;
   font-weight: 600;
   width: 100%;
+  margin-top: 0px;
 }
 
 .login-container .login-form-container .buttons-container .login-gl-btn .google-image {
