--- a/client/src/components/LoginComponent/style/logincomponent.scss
+++ b/client/src/components/LoginComponent/style/logincomponent.scss
@@ -71,6 +71,7 @@
         background-color: rgb(255, 255, 255);
         font-weight: 600;
         width: 100%;
+        margin-top: 0px;
 
         .google-image {
           width: 20px;
