--- a/client/src/components/ItemsGrid/style/itemsgrid.scss
+++ b/client/src/components/ItemsGrid/style/itemsgrid.scss
@@ -5,6 +5,10 @@
     padding: 2%;
     border-radius: 6px;
     margin-bottom: 40px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
     .filter-header {
       width: fit-content;
@@ -33,7 +37,6 @@
       color: #000;
       display: flex;
       align-items: center;
-      background-color: #f5f5f5;
       cursor: pointer;
 
       &:hover {
@@ -42,7 +45,15 @@
 
       input {
         cursor: pointer;
+        display: none;
       }
+    }
+    .memespop {
+      background-color: rgb(255, 137, 225);
+    }
+
+    .explore {
+      background-color: rgb(137, 145, 255);
     }
   }
 
@@ -67,9 +78,10 @@
       cursor: pointer;
 
       img {
-        border-radius: 10px;
+        border-radius: 6px;
         width: 200px;
         height: 200px;
+        border: 3px #d3d3d3 solid;
         &:hover {
           box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.75);
         }
