--- a/client/src/components/Navbar/style/navbar.css
+++ b/client/src/components/Navbar/style/navbar.css
@@ -11,6 +11,11 @@
   width: 100%;
   height: 80px;
   background-color: whitesmoke;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  -webkit-box-shadow: 0px -20px 25px 7px #181818;
+          box-shadow: 0px -20px 25px 7px #181818;
 }
 
 .nav-container .logo-icon {
