--- a/client/src/components/Navbar/style/navbar.scss
+++ b/client/src/components/Navbar/style/navbar.scss
@@ -5,6 +5,9 @@
   width: 100%;
   height: 80px;
   background-color: rgb(245, 245, 245);
+  position: sticky;
+  top: 0;
+  box-shadow: 0px -20px 25px 7px #181818;
 
   .logo-icon {
     margin-left: 20px;
