--- a/client/src/components/ItemsGrid/style/itemsgrid.scss
+++ b/client/src/components/ItemsGrid/style/itemsgrid.scss
@@ -5,10 +5,6 @@
     padding: 2%;
     border-radius: 6px;
     margin-bottom: 40px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 
     .filter-header {
       width: fit-content;
@@ -33,7 +29,7 @@
       margin-bottom: 50px;
       border: none;
       cursor: pointer;
-      font-weight: 500;
+      font-weight: 600;
       color: #000;
       display: flex;
       align-items: center;
@@ -90,6 +86,63 @@
 
     .spinner {
       margin-top: 10%;
+    }
+
+    .explore-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      h1 {
+        font-size: 45px;
+      }
+      .explore-buttons {
+        display: flex;
+        align-items: center;
+
+        button {
+          width: 220px;
+          height: 80px;
+          font-size: 30px;
+          cursor: pointer;
+          font-weight: 600;
+        }
+
+        .explore-login {
+          border-radius: 5px;
+          border: none;
+          background-color: rgb(77, 255, 166);
+          outline: 2px solid rgb(0, 204, 102);
+          color: rgb(14, 14, 14);
+          cursor: pointer;
+
+          &:hover {
+            border: 2px solid rgb(255, 255, 255);
+          }
+
+          &:focus {
+            outline: 2px solid rgb(0, 204, 102);
+          }
+        }
+
+        .explore-register {
+          border-radius: 5px;
+          border: none;
+          background-color: rgb(124, 77, 255);
+          outline: 2px solid rgb(82, 19, 255);
+          color: #fff;
+          cursor: pointer;
+
+          &:hover {
+            border: 2px solid white;
+          }
+
+          &:focus {
+            outline: 2px solid rgb(82, 19, 255);
+          }
+        }
+      }
     }
   }
 }
