--- a/client/src/pages/Home/style/home.scss
+++ b/client/src/pages/Home/style/home.scss
@@ -9,20 +9,77 @@ body {
 
 .upload-container {
   .upload-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     bottom: 40px;
     right: 40px;
-    background-color: rgb(255, 64, 121);
+    background-color: rgb(131, 19, 235);
     color: #fff;
     border-radius: 50px;
-    text-align: center;
     box-shadow: 2px 2px 3px #999;
     border: none;
+    font-size: 50px;
+    cursor: pointer;
 
     &:active {
       transform: scale(0.95);
     }
+  }
+
+  .input-upload {
+    display: none;
+  }
+
+  .input-title {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    height: 150px;
+    bottom: 30px;
+    right: 30px;
+    display: flex;
+    height: 100 px;
+    background-color: rgb(243, 243, 243);
+    box-shadow: 0px 6px 31px -8px rgba(0, 0, 0, 0.75);
+    border-radius: 10px;
+    padding: 2%;
+
+    .close-icon-container {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+    }
+
+    .close-icon {
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+    }
+
+    .upload-section {
+      .upload-action {
+        border: none;
+        cursor: pointer;
+        background-color: rgb(243, 243, 243);
+        .upload-icon-action {
+          width: 30px;
+          height: 30px;
+        }
+      }
+    }
+  }
+
+  #title-input {
+    height: 40px;
+  }
+
+  .prev-image {
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
   }
 }
